Fix a bug on Firefox. The right part of button previous in the navigation bar fall down

--- a/source/_css/components/_post-actions.scss
+++ b/source/_css/components/_post-actions.scss
@@ -22,7 +22,9 @@
         z-index: map-get($z-indexes, c-post-bottom-bar) + 2;
 
         li.post-action {
-            float: left;
+            float:     left;
+            // Fix a bug on Firefox. the right part of button `previous` fall down without this `min-width`
+            min-width: 42px;
 
             &:last-child {
                 .post-action-btn {
